--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -t production",
+    "start:dev": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --env=prod",
     "test": "ng test",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
