--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve -t production",
     "start:dev": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --env=prod -t=production",
+    "deploy": "npm run build:prod && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
