--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
     "ngx-toastr": "^8.10.2",
